--- a/style.css
+++ b/style.css
@@ -12,13 +12,23 @@ body {
   }
 
   .sidebar{
-    background-color: red
+    background-color: #121212;
+    width: 340px;
+    border-radius: 1rem; 
+
   }
   
   .main-content{
-    background-color: yellow;
+    background-color: #121212;
+    flex: 1;
+    overflow: auto;
   }
 
   .music-player{
-    background-color: green;
+    background-color: black;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    height: 72px;
+
   }
