--- a/style.css
+++ b/style.css
@@ -1,34 +1,108 @@
-body {
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    background-color: black;
-    color: white;
-    overflow: hidden;
-  }
+body { 
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  background-color: black;
+  color: white;
+  overflow: hidden;
+  padding: 0%;
+}
 
-  .main{
-    display: flex;
-    height: 100vh;
-  }
+.main{
+  display: flex;
+  height: 100vh;
+  padding: 0.5rem;
+}
 
-  .sidebar{
-    background-color: #121212;
-    width: 340px;
-    border-radius: 1rem; 
+.sidebar{
+  background-color: green;
+  width: 340px;
+  border-radius: 1rem; 
 
-  }
-  
-  .main-content{
-    background-color: #121212;
-    flex: 1;
-    overflow: auto;
-  }
+}
 
-  .music-player{
-    background-color: black;
-    position: fixed;
-    bottom:0;
-    width: 100%;
-    height: 72px;
+.main-content{
+  background-color: #121212;
+  flex: 1;
+  overflow: auto;
+}
 
-  }
+.music-player{
+  background-color: black;
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  height: 72px;
+
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+.Nav{
+  background-color: #121212;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 188px;
+  padding:0.5rem 0.75rem;
+
+}
+
+.nav-option{
+  line-height: 2.5rem;
+  opacity: 0.7;
+  padding: 0.5rem 0.75rem;
+}
+
+.nav-option:hover{
+  opacity: 1;
+}
+
+.nav-option{
+  font-size: 1.25rem;
+}
+
+.nav-option a{
+  font-size: 1rem;
+  margin: 1rem;
+
+}
+
+.library{
+  background-color: #121212;
+  border-radius: 1rem;
+  height: 100%;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
+}
+
+.options{
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Ensure vertical alignment */
+}
+
+.library-option{
+  display: flex;
+  align-items: center;
+}
+
+.library-option img{
+  height: 1.25rem;
+  width: 1.25rem;
+  margin-right: 1rem; /* Space between icon and text */
+}
+
+.icons{
+  display: flex;
+  gap: 0.75rem; /* Space between the plus and arrow icons */
+  font-size: 1.25rem;
+  opacity: 0.7;
+}
+
+.icons i:hover{
+  opacity: 1;
+}
