--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ body {
 }
 
 .sidebar{
-  background-color: green;
+  background-color: black;
   width: 340px;
   border-radius: 1rem; 
+  margin: 0.5rem;
 
 }
 
@@ -111,8 +112,8 @@ a{
   background-color: #232323;
   height: 8rem;
   border-radius: 0.75rem;
-  margin: 0.5rem 0 0.5rem 0;
-  padding: 1remm 1.25rem;
+  margin: 0.75rem 0 1.75rem 0;
+  padding: 0.75rem 1.25rem;
 
 }
 
@@ -132,4 +133,7 @@ a{
   border-radius: 100px;
   padding: 0.25rem 1rem;
   font-weight: 700;
+  margin: 0.5rem;
+  height: 2rem;
+  width: fit-content;
 }
