--- a/style.css
+++ b/style.css
@@ -221,3 +221,53 @@ a{
   height: 50%;
   border-top: 1px solid white;
 }
+
+.music-player{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.album{
+  width: 25%;
+}
+
+.player{
+  width:50%;
+  
+}
+
+.controls{
+  width: 25%;
+  
+}
+
+.player-controls{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.player-control-icon{
+  height: 1rem;
+  margin-right: 1.75rem;
+  opacity: 0.7;
+}
+
+.player-control-icons:hover{
+  opacity: 1;
+}
+
+.playback-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.progress-bar{
+  width: 70%;
+  appearance: none;
+  background-color: transparent;
+  cursor: pointer;
+}
